feat: mvp of working staging environment

--- a/projects/gnoland/Makefile
+++ b/projects/gnoland/Makefile
@@ -1,4 +1,4 @@
-.PHONY: dev staging test build down
+.PHONY: dev staging test test-all build down
 
 build:
 	docker compose build
@@ -10,24 +10,16 @@ dev: down build
 	docker compose up
 
 staging: down build
-	 docker compose run --rm --service-ports gnodev-labs -v \
-	 	-web-listener 0.0.0.0:8888 \
-		-node-rpc-listener 0.0.0.0:26657 \
-		-balance-file /gnoroot/gno.land/genesis/genesis_balances.txt
-
-gnoland: down build
-	 docker compose run --rm --service-ports --entrypoint="gnoland" gnodev-labs \
-	 	start -lazy \
-		-genesis-balances-file /gnoroot/gno.land/genesis/genesis_balances.txt
+	docker compose run --rm gnodev-labs staging
 
 # Pass test path to docker compose using bash as entrypoint
-test:
+test: build
 	@if [ -z "$(path)" ]; then \
 		echo "Usage: make test path=gno.land/r/linker000/mockevent/v1"; \
 	else \
-		docker compose run --rm --entrypoint="/bin/bash -c" gnodev-labs -c "gno test -v /gnoroot/examples/$(path)"; \
+		docker compose run --rm gnodev-labs gno test -v /gnoroot/examples/$(path); \
 	fi
 
 # Add paths that you want tested here
-test-all:
+test-all: build
 	@make test path=gno.land/r/linker000/...
