--- a/projects/gnoland/docker-compose.yaml
+++ b/projects/gnoland/docker-compose.yaml
@@ -17,16 +17,7 @@ services:
       - ./gno.land/r/linker000:/gnoroot/examples/gno.land/r/linker000
     environment:
       - GNO_HOME=/gnoroot
-    command:
-      [
-        "-v",
-        "-web-listener",
-        "0.0.0.0:8888",
-        "-node-rpc-listener",
-        "0.0.0.0:26657",
-        "-balance-file",
-        "/gnoroot/gno.land/genesis/genesis_balances.txt",
-      ]
+    command: ["dev"]
 
     # Optional healthcheck
     healthcheck:
