fix: moved eve dir to eve000

--- a/projects/gnoland/Makefile
+++ b/projects/gnoland/Makefile
@@ -22,4 +22,5 @@ test: build
 
 # Add paths that you want tested here
 test-all: build
-	@make test path=gno.land/r/linker000/...
+	@make test path=gno.land/r/linker000/... && \
+	make test path=gno.land/p/eve000/...
