fix: update dockerfile for proper ca on gnocal

--- a/projects/gnocal/Dockerfile
+++ b/projects/gnocal/Dockerfile
@@ -1,5 +1,5 @@
 ARG GO_VERSION=1.24.3
-FROM golang:${GO_VERSION}-bookworm as builder
+FROM golang:${GO_VERSION}-alpine AS builder
 
 WORKDIR /usr/src/app
 COPY go.mod go.sum ./
@@ -7,8 +7,8 @@ RUN go mod download && go mod verify
 COPY . .
 RUN go build -v -o /gnocal ./cmd/main.go
 
-
-FROM debian:bookworm
+FROM alpine:3.22
+RUN apk add --no-cache ca-certificates
 
 COPY --from=builder /gnocal /usr/local/bin/
 CMD ["gnocal"]
