add equivalent go setup for proxy

--- a/projects/gno_cdn/nginx.conf
+++ b/projects/gno_cdn/nginx.conf
@@ -10,14 +10,13 @@ http {
     server {
         listen 80;
 
-        # Rewrite GitHub-style paths into raw.githubusercontent.com
+        // example https://cdn.jsdelivr.net/gh/pflow-xyz/pflow-app@main/static/index.html
         location ~ ^/gh/([^/]+)/([^@]+)@([^/]+)/(.+)$ {
             set $user     $1; // REVIEW: users can be white-listed according to registered realms
             set $repo     $2;
             set $version  $3;
             set $filepath $4;
 
-            // https://cdn.jsdelivr.net/gh/pflow-xyz/pflow-app@main/static/index.html
             set $backend_url "https://cdn.jsdelivr.net/gh/$user/$repo@$version/$filepath";
 
             proxy_pass $backend_url;
