feat: restructure of the code for better testability

--- a/projects/gnoquery/Makefile
+++ b/projects/gnoquery/Makefile
@@ -1,8 +1,12 @@
-.PHONY: install build clean test help
+.PHONY: install test
 
 # Default target
 all: install
 
 # Install to GOPATH/bin
 install:
-	go install .
+	go install -ldflags="-s -w" ./cmd/gnoquery
+
+# Run tests
+test:
+	go test -v ./...
