feat: added logger and fixed role verify logic

--- a/projects/gnolinker/fly.toml
+++ b/projects/gnolinker/fly.toml
@@ -6,12 +6,15 @@
 app = 'gnolinker-discord-stg'
 primary_region = 'dfw'
 
+[env]
+GNOLINKER__LOG_LEVEL = 'debug'
+
 [build]
 
 [processes]
-  app = 'discord'
+app = 'discord'
 
 [[vm]]
-  memory = '1gb'
-  cpu_kind = 'shared'
-  cpus = 1
+memory = '1gb'
+cpu_kind = 'shared'
+cpus = 1
