fix: sorting out bucket health check

--- a/projects/gnolinker/.env.example
+++ b/projects/gnolinker/.env.example
@@ -3,9 +3,8 @@
 
 # Discord Bot Configuration
 GNOLINKER__DISCORD_TOKEN="your-discord-bot-token"
-GNOLINKER__DISCORD_GUILD_ID="your-discord-server-id"
-GNOLINKER__DISCORD_ADMIN_ROLE_ID="admin-role-id"
-GNOLINKER__DISCORD_VERIFIED_ROLE_ID="verified-role-id"
+# Note: Roles are now managed per-guild automatically by the bot.
+# Admin roles are auto-detected and verified roles are auto-created.
 
 # Gno Network Configuration
 GNOLINKER__SIGNING_KEY="hex-encoded-signing-key"
