--- a/.github/workflows/gnolinker.yml
+++ b/.github/workflows/gnolinker.yml
@@ -46,30 +46,16 @@ jobs:
       - name: Run tests
         run: go test ./... -v -race -coverprofile=coverage.out
 
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
-        with:
-          file: ./projects/gnolinker/coverage.out
-          flags: unittests
-          name: codecov-umbrella
-
       - name: Build application
         run: go build -o gnolinker ./cmd/
 
       - name: Test Docker build
         run: docker build -t gnolinker:test .
 
-      - name: Run security scan
-        run: |
-          go install github.com/securecodewarrior/gosec/v2/cmd/gosec@latest
-          gosec -no-fail -fmt sarif -out results.sarif ./...
-        continue-on-error: true
-
-      - name: Upload SARIF file
-        uses: github/codeql-action/upload-sarif@v2
+      - name: Run Gosec Security Scanner
+        uses: securego/gosec@master
         with:
-          sarif_file: projects/gnolinker/results.sarif
-        if: always()
+          args: ./...
 
   deploy:
     name: Deploy to Staging
