--- a/.github/workflows/gnolinker.yml
+++ b/.github/workflows/gnolinker.yml
@@ -84,37 +84,10 @@ jobs:
       - name: Test Docker build
         run: docker build -t gnolinker:test .
 
-  security:
-    name: Security Scan
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Set up Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: "1.24.2"
-      - name: Cache Go modules
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cache/go-build
-            ~/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('projects/gnolinker/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-go-
-      - name: Download dependencies
-        run: go mod download
-
-      - name: Run Gosec Security Scanner
-        uses: securego/gosec@master
-        with:
-          args: ./...
-
   deploy:
     name: Deploy to Staging
     runs-on: ubuntu-latest
-    needs: [test, build, security]
+    needs: [test, build]
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     environment: gnolinker-stg
     steps:
