--- a/projects/gnoland/tx-indexer/fly.toml
+++ b/projects/gnoland/tx-indexer/fly.toml
@@ -16,6 +16,7 @@ internal_port = 8546
 force_https = true
 auto_stop_machines = 'off'
 min_machines_running = 1
+max_machines_running = 1
 processes = ['app']
 
 [[vm]]
