feat: integrate indexer tooling

--- a/projects/gnolinker/Makefile
+++ b/projects/gnolinker/Makefile
@@ -1,4 +1,4 @@
-.PHONY: dev clean down test security-scan
+.PHONY: dev clean down test security-scan pull-data
 
 clean: down
 	docker-compose down -v --remove-orphans
@@ -16,3 +16,19 @@ test:
 security-scan:
 	@which gosec > /dev/null || (echo "Installing gosec..." && go install github.com/securego/gosec/v2/cmd/gosec@latest)
 	gosec ./...
+
+pull-data:
+	@echo "Checking AWS CLI availability..."
+	@which aws > /dev/null || (echo "Error: AWS CLI not found. Please install it first." && exit 1)
+	@echo "Exporting data from MinIO..."
+	@mkdir -p data/export
+	@AWS_ACCESS_KEY_ID=minioadmin \
+	 AWS_SECRET_ACCESS_KEY=minioadmin123 \
+	 AWS_REGION=us-east-1 \
+	 aws s3 sync s3://gnolinker-data data/export/ \
+	   --endpoint-url http://localhost:9000 \
+	   --no-verify-ssl \
+	   --delete || (echo "Error: Failed to sync data. Make sure MinIO is running (make dev)" && exit 1)
+	@echo "✅ Data exported to data/export/"
+	@echo "📁 Contents:"
+	@find data/export -type f 2>/dev/null | head -20 || echo "   (no files found)"
