--- a/.github/workflows/gnoland.yml
+++ b/.github/workflows/gnoland.yml
@@ -14,6 +14,35 @@ on:
   workflow_dispatch:
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        test-path:
+          - gno.land/r/linker000/discord/role/v0
+          - gno.land/r/linker000/discord/user/v0
+          - gno.land/r/linker000/discord/keyring/v0
+          # - gno.land/r/buidlthefuture000/events/gnolandlaunch
+          # - gno.land/r/buidlthefuture000/events/gnoplan001
+          # - gno.land/r/buidlthefuture000/events/onsite001
+          # - gno.land/r/frames000
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Check for Caddy changes
+        uses: dorny/paths-filter@v2
+        id: changes
+        with:
+          filters: |
+            gno-land:
+              - 'projects/gnoland/gno.land/**'
+
+      - name: Run tests for ${{ matrix.test-path }}
+        run: |
+          cd projects/gnoland
+          make test path=${{ matrix.test-path }}
+
   deploy-caddy:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
